crates/rolldown/tests/rolldown/errors/json_parse_error/issue-3102/main.js
import test from './test.json'
console.log(`test: `, test)
